fix topappbar fixed on/off on IE11 and set shadows on icons like in title

--- a/frameworks/projects/Jewel/src/main/resources/defaults.css
+++ b/frameworks/projects/Jewel/src/main/resources/defaults.css
@@ -2561,13 +2561,12 @@ j|TitleBar {
 
 .jewel.topappbar {
   display: flex;
-  position: relative;
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
   z-index: 4;
 }
-.jewel.topappbar + * {
+.jewel.topappbar + div {
   padding-top: 64px;
 }
 .jewel.topappbar.fixed {
